--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -32,7 +32,7 @@ div, header, main, footer {
 a {
 	color: #181C29;
 	text-decoration: none;
-	transition: 0.4s;
+	transition: color 0.4s;
 	cursor: pointer;
 }
 
