--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -25,7 +25,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	align-content: center;
+	align-items: center;
 	
 	background-color: #FFFFFF;
 }
@@ -107,15 +107,25 @@ p {
 
 /* Header */
 
+header {
+	width: 1440px;
+	display: flex;
+}
+
 .logo-div {
 	padding: 8px 20px;
 	display: flex;
-	gap: 30px;
+	align-items: center;
+	gap: 10px;
 }
 
 .logo {
 	width: 24px;
 	height: 24px;
+}
+
+nav {
+
 }
 
 .nav-list {
@@ -125,5 +135,14 @@ p {
 }
 
 .nav-item {
+	padding: 12px 20px;
+}
 
+
+/* Footer */
+
+footer {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
