--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -34,6 +34,10 @@ div, header, main, footer {
 	max-width: 1440px;
 }
 
+header, main, section, footer {
+	width: 1440px;
+}
+
 a {
 	color: #181C29;
 	text-decoration: none;
@@ -113,10 +117,10 @@ p {
 /* Header */
 
 header {
-	width: 1275px;
-	padding: 8px;
+	padding: 8px 0;
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
 }
 
 .logo-link {  }
@@ -126,19 +130,20 @@ header {
 }
 
 .logo-div {
+	margin-left: 90px;
 	padding: 8px 20px;
 	display: flex;
 	align-items: center;
 	gap: 10px;
 }
 
-.logo {
+.icon {
 	width: 24px;
 	height: 24px;
 }
 
 nav {
-
+	padding: 0 75px;
 }
 
 .nav-list {
@@ -151,6 +156,13 @@ nav {
 .nav-item {
 	padding: 12px 20px;
 	border-radius: 12px;
+	transition: all 0.4s;
+}
+
+.nav-item:hover {
+	background-color: rgba(255, 70, 70, 0.1);
+}
+
 }
 
 
