--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -207,3 +207,24 @@ footer {
 	flex-direction: column;
 	align-items: center;
 }
+
+.div-socials {
+	display: flex;
+	gap: 12px;
+}
+
+.icon-div {
+	width: 40px;
+	height: 40px;
+
+	display: flex;
+	justify-content: center;
+	align-content: center;
+
+	transition: all 0.4s;
+}
+
+.icon-div {
+	filter: invert(51%) sepia(50%) saturate(6729%) hue-rotate(334deg) brightness(101%) contrast(104%);
+}
+
