--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -235,7 +235,7 @@ main {
 .about-div {
 	display: flex;
 	justify-content: space-between;
-	align-content: center;
+	align-items: center;
 	background-color: #FFFFFF;
 	border-radius: 20px;
 }
@@ -260,6 +260,23 @@ footer {
 	justify-content: stretch;
 	align-items: stretch;
 	gap: 10px;
+}
+
+.contact-card {
+	padding: 20px;
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 12px;
+	
+	border-radius: 20px;
+	background-color: #ECF3F8;
+}
+
+.contact-pic {
+	width: 80px;
+	height: 80px;
 }
 
 .div-socials {
