--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -171,6 +171,11 @@ nav {
 	background-color: rgba(255, 70, 70, 0.1);
 }
 
+.nav-item-active {
+	background-color: rgba(255, 70, 70, 0.1);
+	color: #FF4646;
+}
+
 /* ----- Main Styles ----- */
 
 
