--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -170,6 +170,9 @@ nav {
 
 .nav-item:hover {
 	background-color: rgba(255, 70, 70, 0.1);
+}
+
+.nav-item:hover a {
 	color: #FF4646;
 }
 
@@ -290,7 +293,7 @@ footer {
 	background-color: #ECF3F8;
 }
 
-.contact-card:hover { color: #FF4646; }
+.contact-card:hover p, h3 { color: #FF4646; }
 
 .contact-pic {
 	width: 80px;
