--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -291,9 +291,13 @@ footer {
 
 	border-radius: 20px;
 	background-color: #ECF3F8;
+
+	transition: 0.4s;
 }
 
-.contact-card:hover p, h3 { color: #FF4646; }
+.contact-card:hover p { color: #FF4646; }
+
+.contact-card:hover h3 { color: #FF4646; }
 
 .contact-pic {
 	width: 80px;
