--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -171,12 +171,13 @@ nav {
 
 .nav-item:hover {
 	background-color: rgba(255, 70, 70, 0.1);
+	color: #FF4646;
 }
-
+/*
 .nav-item:hover a {
 	color: #FF4646;
 }
-
+*/
 .nav-item-active {
 	padding: 12px 20px;
 	border-radius: 12px;
