--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -41,13 +41,15 @@ header, main, section, footer {
 a {
 	color: #181C29;
 	text-decoration: none;
-	transition: all ease-in-out 0.4s;
+	transition: all ease-in-out 0.2s;
 	cursor: pointer;
 }
 
 a:hover {
 	color: #FF4646;
 }
+
+.link { transition: all ease-in-out 0.4s; }
 
 ul {
 	margin: 0;
