--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -330,6 +330,8 @@ main {
 	border-radius: 20px;
 	background-color: #ECF3F8;
 
+	border: none;
+	
 	cursor: pointer;
 }
 
@@ -369,7 +371,7 @@ main {
 /* Footer */
 
 footer {
-	padding: 60px 0;
+	padding: 40px 0 60px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
