--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -134,7 +134,7 @@ p {
 /* Header */
 
 header {
-	padding: 8px 0 5px;
+	padding: 12px 0;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -266,6 +266,11 @@ main {
 .about-text {
 	margin-left: 60px;
 	max-width: 410px;
+
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	gap: 20px;
 }
 
 /* Slider Section */
@@ -356,7 +361,7 @@ main {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 20px;
+	gap: 16px;
 
 	background-image: url("./assets/png/bgs/bg-snow.png");
 	background-size: cover;
