--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -378,7 +378,7 @@ main {
 /* CTA Section */
 
 .CTA {
-	padding: 60px;
+	padding: 180px 0;
 
 	display: flex;
 	flex-direction: column;
@@ -399,6 +399,8 @@ main {
 }
 
 .timer {
+	padding: 9px 12px;
+
 	display: flex;
 	flex-direction: row;
 	align-items: center;
@@ -408,9 +410,17 @@ main {
 }
 
 .cell {
+	width: 80px;
+
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+}
+
+.line {
+	height: 20px;
+	width: 1px;
+	background-color: rgba(255, 255, 255, 0.4);
 }
 
 
