--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -59,8 +59,15 @@ ul {
 li { display: flex; }
 
 .pic {
-	object-fit: contain;
-	border-radius: 20px;
+	width: 638px;
+	height: 528px;
+
+    background-size: cover;
+    background-image: url(./assets/png/santa.png);
+    background-size: cover;
+    background-position: center;
+
+    border-radius: 20px;
 }
 
 /* Text-styles */
@@ -136,7 +143,7 @@ p {
 header {
 	position: relative;
 	padding: 12px 0;
-	
+
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -395,6 +402,7 @@ main {
 
 .best-gifts {
 	display: flex;
+	justify-content: center;
 	gap: 12px;
 }
 
