fix: change display of best-gifts from flex to grid

--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -381,8 +381,8 @@ main {
 }
 
 .best-gifts {
-	display: flex;
-	justify-content: center;
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
 	gap: 12px;
 }
 
