--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -560,7 +560,7 @@ footer {
 	border-radius: 20px;
 	background-color: #ECF3F8;
 
-	transition: ease-in-out 0.4s;
+	transition: color ease-in-out 0.4s;
 }
 
 .contact-pic {
