--- a/christmas-shop/media.css
+++ b/christmas-shop/media.css
@@ -92,7 +92,59 @@
 
 	.slider-div { padding: 8px; }
 
-	.best-gifts { flex-wrap: wrap; }
+	.best-gifts { grid-template-columns: 1fr 1fr; }
+
+}
+
+@media screen and (max-width: 767px) and (min-width: 381px) {
+
+	div, section, header, nav, main, footer { max-width: 100vw; }
+
+	nav {
+		width: 100px;
+		padding: 0;
+		visibility: hidden;
+	}
+
+	.burger { visibility: visible; }
+
+	.logo-div { margin-left: 8px; }
+
+	.hero-div {
+		padding: 120px 8px;
+	}
+
+	.about-div {
+		margin: 0 8px;
+		flex-direction: column;
+	}
+
+	.about-text {
+		margin: 60px 20px;
+		max-width: 100%;
+	}
+
+	.pic {
+		width: 95vw;
+	}
+
+	.pagination { min-width: 96%; }
+	
+	.gifts-text { width: 95vw; }
+
+	.gifts-ul { gap: 0; }
+	.nav-gift-item-active { padding: 12px 8px; }
+	.nav-gift-item { padding: 12px 8px; }
+
+	.contacts {
+		max-width: 100vw;
+		min-width: 95vw;
+		padding: 20px 8px;
+	}
+
+	.slider-div { padding: 8px; }
+
+	.best-gifts { grid-template-columns: 1fr; }
 
 }
 
@@ -144,6 +196,6 @@
 
 	.slider-div { padding: 8px; }
 
-	.best-gifts { flex-wrap: wrap; }
+	.best-gifts { grid-template-columns: 1fr; }
 
 }
