--- a/christmas-shop/media.css
+++ b/christmas-shop/media.css
@@ -65,6 +65,35 @@
 	}
 }
 
+@media screen and (max-width: 1439px) and (min-width: 769px) {
+
+	div, section, header, nav, main, footer { max-width: 100vw; }
+
+	.burger { visibility: hidden; }
+
+	.logo-div { margin-left: 8px; }
+
+	.about-div { margin: 0 8px; }
+
+	.about-text {
+		margin: 60px;
+		max-width: 256px;
+	}
+
+	.pic {}
+
+	.contacts {
+		max-width: 100vw;
+		min-width: 97vw;
+		padding: 20px 8px;
+	}
+
+	.slider-div { padding: 8px; }
+
+	.best-gifts { grid-template-columns: 1fr 1fr; }
+
+}
+
 @media screen and (max-width: 769px) {
 
 	div, section, header, nav, main, footer { max-width: 768px; }
