--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -307,13 +307,16 @@ main {
 
 .slider-div {
 	padding: 8px 84px;
-	min-width: 2500px;
+	min-width: max-content;
 
 	display: flex;
 	align-items: center;
 	gap: 20px;
 
 	align-self: flex-start;
+
+	transform: translate(0);
+	transition: all ease-in-out 0.7s;
 }
 
 .slider-img {
