--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -29,6 +29,7 @@ body {
 	
 	background-color: #FFFFFF;
 	overflow-x: clip;
+	overflow-y: auto;
 }
 
 div, header, main, footer {
@@ -200,6 +201,8 @@ nav {
 	align-items: center;
 	gap: 8px;
 
+	cursor: pointer;
+
 	visibility: hidden;
 }
 
@@ -209,6 +212,35 @@ nav {
 
 	border-radius: 1px;
 	background-color: #181C29;
+
+	transform: translate(0, 0) rotate(0);
+	transition: all ease-in-out 0.4s;
+}
+
+.mob-menu {
+	position: fixed;
+	bottom: 0;
+
+	width: 100vw;
+	height: 91vh;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	background-color: #FFFFFF;
+
+	transform: translate(100%, 0);
+	transition: all ease-in-out 0.7s;
+
+	z-index: 10;
+
+	visibility: hidden;
+}
+
+.mob-nav {
+	flex-direction: column;
+	align-items: center;
 }
 
 
