--- a/christmas-shop/media.css
+++ b/christmas-shop/media.css
@@ -45,6 +45,10 @@
 
 	.burger { visibility: hidden; }
 
+	.mob-menu { transform: translate(100%, 0); }
+
+	.burger-line { transform: translate(0, 0) rotate(0); }
+
 	.gifts-container { min-width: 1277px; }
 }
 
@@ -53,6 +57,10 @@
 	div, section, header, nav, main, footer { max-width: 1440px; }
 
 	.burger { visibility: hidden; }
+
+	.mob-menu { transform: translate(100%, 0); }
+
+	.burger-line { transform: translate(0, 0) rotate(0); }
 
 	.gifts-container { min-width: 80vw; }
 }
@@ -69,7 +77,9 @@
 
 	div, section, header, nav, main, footer { max-width: 100vw; }
 
-	.burger { visibility: hidden; }
+	.mob-menu { transform: translate(100%, 0); }
+
+	.burger-line { transform: translate(0, 0) rotate(0); }
 
 	.logo-div { margin-left: 8px; }
 
@@ -92,6 +102,8 @@
 
 	.best-gifts { grid-template-columns: 1fr 1fr; }
 
+	.burger { visibility: hidden; }
+
 }
 
 @media screen and (max-width: 769px) {
@@ -101,6 +113,8 @@
 	nav { visibility: hidden; }
 
 	.burger { visibility: visible; }
+
+	.mob-menu { visibility: visible; }
 
 	.logo-div { margin-left: 8px; }
 
@@ -138,6 +152,8 @@
 	}
 
 	.burger { visibility: visible; }
+
+	.mob-menu { visibility: visible; }
 
 	.logo-div { margin-left: 8px; }
 
@@ -190,6 +206,8 @@
 	}
 
 	.burger { visibility: visible; }
+
+	.mob-menu { visibility: visible; }
 
 	.logo-div { margin-left: 8px; }
 
