--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -494,15 +494,20 @@ main {
 
 .nav-gift-item {
 	padding: 12px 20px;
+	border: none;
 	border-radius: 12px;
+	background-color: transparent;
 	transition: all ease-in-out 0.4s;
 	cursor: pointer;
 }
 
 .nav-gift-item-active {
 	padding: 12px 20px;
+	border: none;
 	border-radius: 12px;
 	background-color: rgba(255, 255, 255, 0.2);
+	transition: none;
+	cursor: default;
 }
 
 .gifts-container {
