--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -609,12 +609,17 @@ main {
 	width: 100%;
 	height: 100%;
 
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
 	background-color: rgba(24, 28, 41, 0.8);
 }
 
 .modal-card {
 	width: 70vw;
 	height: auto;
+	position: relative;
 
 	max-width: 400px;
 
@@ -628,6 +633,32 @@ main {
 	background-color: #ECF3F8;
 	
 	cursor: auto;
+}
+
+.modal-pic {
+	width: 70vw;
+	height: 230px;
+
+	background-size: contain;
+	background-position: center;
+	background-repeat: no-repeat;
+}
+
+.modal-text {
+	width: 70vw;
+	height: auto;
+	
+	padding: 20px;
+
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: flex-start;
+	gap: 10px;
+
+	overflow: hidden;
+
+	border-radius: 20px;
+	background-color: #FFFFFF;
 }
 
 .div-stats {
