--- a/christmas-shop/style.css
+++ b/christmas-shop/style.css
@@ -645,9 +645,9 @@ main {
 }
 
 .modal-text {
-	width: 70vw;
+	width: auto;
 	height: auto;
-	
+
 	padding: 20px;
 
 	display: flex;
@@ -665,7 +665,7 @@ main {
 	width: 100%;
 
 	display: flex;
-	flex-direction: column nowrap;
+	flex-direction: column;
 	align-items: center;
 	gap: 0;
 }
@@ -683,6 +683,7 @@ main {
 
 	display: flex;
 	flex-direction: row;
+	justify-content: flex-end;
 	gap: 12px;
 }
 
@@ -709,7 +710,7 @@ main {
 }
 
 #close {
-	position: relative;
+	position: absolute;
 	top: 8px;
 	right: 8px;
 	z-index: 1010;
