--- a/simon-says/style.css
+++ b/simon-says/style.css
@@ -7,13 +7,20 @@ html {
 
 body {
   min-height: 100vh;
+  min-width: 100%;
+
   margin: 0;
-  padding: 0;
+  padding: 1.5rem;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
+
+  background-color: #fafafa;
+
+  font-family: Arial, sans-serif;
+}
 
   background-color: #ffffff;
 }
