--- a/simon-says/style.css
+++ b/simon-says/style.css
@@ -22,5 +22,38 @@ body {
   font-family: Arial, sans-serif;
 }
 
+section, div {
+  width: 100%;
+  padding: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  gap: 1rem;
+}
+
+section {
+  flex-direction: column;
+}
+
+button {
+  padding: 1rem;
+
+  border: none;
+  border-radius: 0.5rem;
+
+  background-color: #007755;
+  color: #ffffff;
+}
+
+p {
+  margin: 0;
+}
+
+.hid {
+  display: none;
+}
+
   background-color: #ffffff;
 }
