--- a/simon-says/style.css
+++ b/simon-says/style.css
@@ -10,7 +10,7 @@ body {
   min-width: 100%;
 
   margin: 0;
-  padding: 1.5rem;
+  padding: 1.5rem 0;
 
   display: flex;
   flex-direction: column;
