feat: add named styles (menu with buttons)

--- a/simon-says/style.css
+++ b/simon-says/style.css
@@ -55,5 +55,14 @@ p {
   display: none;
 }
 
+/* Named Styles */
+
+.menu {}
+
+.start-btn {}
+.new-game-btn {}
+.repeat-btn {}
+.next-btn {}
+
   background-color: #ffffff;
 }
