feat: add styles for difficulty menu and its buttons

--- a/simon-says/style.css
+++ b/simon-says/style.css
@@ -64,5 +64,11 @@ p {
 .repeat-btn {}
 .next-btn {}
 
+.difficulty {}
+
+.easy-diff {}
+.med-diff {}
+.hard-diff {}
+
   background-color: #ffffff;
 }
