feat: add styles for virtual keyboard

--- a/simon-says/style.css
+++ b/simon-says/style.css
@@ -112,4 +112,29 @@ p {
   text-transform: uppercase;
 }
 
+.keyboard {
+  padding: 0.5rem;
+}
+
+.numbers {}
+
+.letters {}
+
+.key-btn {
+  border: 1px solid rgba(204, 204, 204, 1);
+
+  background-color: rgba(245, 245, 245, 1);
+
+  color: #000000;
+  text-transform: uppercase;
+
+  transition: filter 0.4s;
+  transition: color 0.4s;
+  transition: background-color 0.4s;
+}
+
+.key-btn:hover {
+  background-color: rgba(0, 187, 119, 0.3);
+  border-color: rgba(0, 119, 85, 1);
+  filter: drop-shadow(0 0 0.5rem #00bb77);
 }
