--- a/simon-says/style.css
+++ b/simon-says/style.css
@@ -10,7 +10,7 @@ body {
   min-width: 100%;
 
   margin: 0;
-  padding: 1.5rem 0;
+  padding: 0 0 1.5rem;
 
   display: flex;
   flex-direction: column;
@@ -38,7 +38,7 @@ section {
 }
 
 button {
-  padding: 1rem;
+  padding: 0.5rem 1rem;
 
   border: none;
   border-radius: 0.5rem;
@@ -103,8 +103,7 @@ p {
   width: 12rem;
 
   border-radius: 0.5rem;
-  boreder-width: 1px;
-  border-color: #cccccc;
+  border: 1px solid #cccccc;
 
   background-color: #ffffff;
 
@@ -113,7 +112,8 @@ p {
 }
 
 .keyboard {
-  padding: 0.5rem;
+  width: 95%;
+  flex-direction: column;
 }
 
 .numbers {}
@@ -121,6 +121,11 @@ p {
 .letters {}
 
 .key-btn {
+  padding: 0;
+
+  width: 2.5rem;
+  height: 2rem;
+
   border: 1px solid rgba(204, 204, 204, 1);
 
   background-color: rgba(245, 245, 245, 1);
