--- a/simon-says/style.css
+++ b/simon-says/style.css
@@ -34,6 +34,7 @@ section, div {
 }
 
 section {
+  position: relative;
   flex-direction: column;
 }
 
@@ -47,6 +48,12 @@ button {
   color: rgba(255, 255, 255, 1);
 
   transition: all 0.4s;
+
+  cursor: pointer;
+}
+
+button:disabled {
+  cursor: not-allowed;
 }
 
 p {
@@ -58,6 +65,22 @@ p {
 }
 
 /* Named Styles */
+
+.overlay {
+  max-width: 750px;
+  width: 95%;
+  height: 100%;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  transform: translate(-50%, -50%);
+
+  background-color: transparent;
+
+  cursor: wait;
+}
 
 .menu {
   flex-wrap: wrap;
@@ -80,6 +103,8 @@ p {
   background-color: rgba(0, 119, 85, 0.2);
   color: rgba(0, 0, 0, 0.7);
   border-color: rgba(0, 119, 85, 0.3);
+
+  cursor: default;
 }
 
 .rounds {
@@ -90,9 +115,12 @@ p {
 .num {}
 
 .alert {
+  width: auto;
+  padding: 0.5rem 1rem;
+
   border-color: transparent;
   border-radius: 0.5rem;
-  border-width: 1px;
+  border: 1px solid;
 
   background-color: transparent;
   color: transparent;
@@ -113,6 +141,8 @@ p {
 .field {
   height: 2rem;
   width: 12rem;
+
+  gap: 0;
 
   border-radius: 0.5rem;
   border: 1px solid #cccccc;
@@ -150,7 +180,7 @@ p {
   color: #000000;
   text-transform: uppercase;
 
-  transition: all 0.4s;
+  transition: all 0.3s;
 }
 
 .key-btn:hover {
