--- a/simon-says/style.css
+++ b/simon-says/style.css
@@ -156,7 +156,26 @@ p {
 .keyboard {
   max-width: 750px;
   width: 95%;
+
+  position: relative;
+
   flex-direction: column;
+}
+
+.overlay-keys {
+  max-width: 750px;
+  width: 95%;
+  height: 100%;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+
+  transform: translate(-50%, -50%);
+
+  background-color: transparent;
+
+  cursor: default;
 }
 
 .numbers {
