--- a/nonograms/style.css
+++ b/nonograms/style.css
@@ -41,3 +41,25 @@ section {
 p {
   margin: 0;
 }
+
+button {
+  padding: 0.5rem 1rem;
+
+  border: 1px solid rgba(0, 119, 85, 1);
+  border-radius: 0.5rem;
+
+  background-color: rgba(0, 119, 85, 1);
+  color: rgba(255, 255, 255, 1);
+
+  transition: all 0.4s;
+
+  cursor: pointer;
+}
+
+button:disabled {
+  cursor: not-allowed;
+}
+
+.hid {
+  display: none;
+}
