--- a/nonograms/style.css
+++ b/nonograms/style.css
@@ -93,3 +93,81 @@ button:disabled {
 .min-span {}
 .sec-span {}
 
+.nonogram-div {}
+
+.grid-around {
+  width: fit-content;
+  height: fit-content;
+  display: grid;
+  grid-template: auto auto / auto auto;
+  border: 1px solid #000000;
+  gap: 0;
+}
+
+.grid-around > div {
+  width: 100%;
+  height: 100%;
+  border: 2px solid #000000;
+  gap: 0;
+}
+
+.left-col {
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+}
+
+.top-num {
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  justify-content: flex-end;
+  border: 1px solid #000000;
+}
+.left-num {
+  width: 100%;
+  height: 100%;
+  justify-content: flex-end;
+  border: 1px solid #000000;
+}
+
+.grid-easy {
+  display: grid;
+  grid-template-rows: 2rem 2rem 2rem 2rem 2rem;
+  grid-template-columns: 2rem 2rem 2rem 2rem 2rem;
+  gap: 0;
+}
+.grid-med {
+  display: grid;
+  grid-template-rows: 2rem 2rem 2rem 2rem 2rem;
+  grid-template-columns: 2rem 2rem 2rem 2rem 2rem;
+  gap: 0;
+}
+.grid-hard {
+  display: grid;
+  grid-template-rows: 2rem 2rem 2rem 2rem 2rem;
+  grid-template-columns: 2rem 2rem 2rem 2rem 2rem;
+  gap: 0;
+}
+
+.cell {
+  width: 0.5rem;
+  padding: 0.1rem;
+
+  border: 1px solid #000000;
+  border-radius: 0;
+
+  background-color: rgba(255, 255, 255, 1);
+
+  transition: all 0.4s;
+
+  cursor: pointer;
+}
+
+.cell:hover {
+  box-shadow: 0 0 0.5rem #00bb77;
+}
+
+.checked {
+  background-color: rgba(0, 0, 0, 1);
+}
