--- a/nonograms/style.css
+++ b/nonograms/style.css
@@ -6,7 +6,7 @@ html {
 }
 
 body {
-  min-height: 100vh;
+  min-height: 100%;
   min-width: 100%;
 
   margin: 0;
@@ -100,7 +100,7 @@ button:disabled {
   height: fit-content;
   display: grid;
   grid-template: auto auto / auto auto;
-  border: 1px solid #000000;
+  border: none;
   gap: 0;
 }
 
@@ -123,49 +123,53 @@ button:disabled {
   flex-direction: column;
   justify-content: flex-end;
   border: 1px solid #000000;
+  gap: 0.2rem;
 }
 .left-num {
   width: 100%;
   height: 100%;
   justify-content: flex-end;
   border: 1px solid #000000;
+  gap: 0.8rem;
 }
 
 .grid-easy {
   display: grid;
-  grid-template-rows: 2rem 2rem 2rem 2rem 2rem;
-  grid-template-columns: 2rem 2rem 2rem 2rem 2rem;
+  grid-template-rows: repeat(5, 1fr);
+  grid-template-columns: repeat(5, 1fr);
   gap: 0;
 }
 .grid-med {
   display: grid;
-  grid-template-rows: 2rem 2rem 2rem 2rem 2rem;
-  grid-template-columns: 2rem 2rem 2rem 2rem 2rem;
+  grid-template-rows: repeat(10, 1fr);
+  grid-template-columns: repeat(10, 1fr);
   gap: 0;
 }
 .grid-hard {
   display: grid;
-  grid-template-rows: 2rem 2rem 2rem 2rem 2rem;
-  grid-template-columns: 2rem 2rem 2rem 2rem 2rem;
+  grid-template-rows: repeat(15, 1fr);
+  grid-template-columns: repeat(15, 1fr);
   gap: 0;
 }
 
 .cell {
-  width: 0.5rem;
+  width: 2rem;
+  height: 2rem;
   padding: 0.1rem;
 
+  outline: 1px solid #000000;
   border: 1px solid #000000;
   border-radius: 0;
 
   background-color: rgba(255, 255, 255, 1);
 
-  transition: all 0.4s;
+  transition: all 0.2s;
 
   cursor: pointer;
 }
 
 .cell:hover {
-  box-shadow: 0 0 0.5rem #00bb77;
+  box-shadow: inset 0 0 0.5rem #00bb77;
 }
 
 .checked {
