--- a/nonograms/style.css
+++ b/nonograms/style.css
@@ -169,7 +169,7 @@ button:disabled {
 }
 
 .cell:hover {
-  box-shadow: inset 0 0 0.5rem #00bb77;
+  box-shadow: inset 0 0 0.6rem rgba(0, 255, 160, 0.6);
 }
 
 .checked {
